<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_72dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_32sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:gravity="center" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textSize="@dimen/dimen_16sp" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/dimen_160dp"
                    android:layout_height="@dimen/dimen_1dp"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:background="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="@dimen/dimen_16sp" />

                <View
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:background="@color/colorPrimaryLight" />
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@color/colorAccent"
        android:text="@string/no_account"
        android:textColor="@color/colorWhite" />
</LinearLayout>