<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide_show_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayDocumentActivity">

    <LinearLayout
        android:id="@+id/control_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.teleprompter.ScrollView
            android:id="@+id/slideshow_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:keepScreenOn="true"
                tools:textSize="@dimen/dimen_32sp"
                tools:textStyle="bold" />
        </com.example.teleprompter.ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/countdown_view"
        style="?metaButtonBarButtonStyle"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_gravity="center"
        android:background="@color/blackOverlay"
        android:visibility="invisible">

        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/countdown_3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_48sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackOverlay"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/blackOverlay"
            android:orientation="horizontal">

            <Button
                android:id="@+id/slideshow_play"
                style="?metaButtonBarButtonStyle"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/slideshow_play"
                android:textStyle="bold" />

            <Button
                android:id="@+id/slideshow_pause"
                style="?metaButtonBarButtonStyle"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/slideshow_pause"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>