<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        tools:context="com.google.developer.colorvalue.AddCardActivity">

        <SeekBar
            android:id="@+id/red"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:max="255"
            app:layout_constraintLeft_toRightOf="@+id/text_red"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorFrame" />

        <SeekBar
            android:id="@+id/green"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:max="255"
            app:layout_constraintLeft_toRightOf="@+id/text_green"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red" />

        <SeekBar
            android:id="@+id/blue"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:max="255"
            app:layout_constraintLeft_toRightOf="@+id/text_blue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/green" />

        <TextView
            android:id="@+id/text_red"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/r"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/red" />

        <TextView
            android:id="@+id/text_green"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/g"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/green" />

        <TextView
            android:id="@+id/text_blue"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/b"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/colorFrame"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_120dp"
            android:layout_margin="@dimen/dimen_8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.teleprompter.ColorPicker
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@android:color/black" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>