<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:background="@drawable/round_button"
            android:elevation="@dimen/dimen_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play" />

        <SeekBar
            android:id="@+id/seekBar_speed"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:max="4"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintEnd_toStartOf="@+id/seekBar_speed_display"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBar_font_size"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:max="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/font_size_display"
            app:layout_constraintStart_toStartOf="@+id/seekBar_speed" />

        <TextView
            android:id="@+id/text_color_picker_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:gravity="center"
            android:text="@string/text_color_label"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toTopOf="@+id/colorViewFrame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:gravity="center"
            android:text="@string/background_color_label"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toTopOf="@+id/background_color_picker_frame"
            app:layout_constraintEnd_toEndOf="@+id/text_color_picker_label"
            app:layout_constraintStart_toStartOf="@+id/text_color_picker_label"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

        <TextView
            android:id="@+id/seekBar_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/scroll_speed_label"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_speed"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/seekBar_speed_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_speed"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/seekBar_speed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/font_size_label"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_font_size"
            app:layout_constraintEnd_toEndOf="@+id/seekBar_speed_label"
            app:layout_constraintStart_toStartOf="@+id/seekBar_speed_label"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

        <TextView
            android:id="@+id/font_size_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_font_size"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/seekBar_font_size" />

        <androidx.cardview.widget.CardView
            android:id="@+id/colorViewFrame"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="@dimen/dimen_32dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="@+id/text_color_picker_label"
            app:layout_constraintStart_toStartOf="@+id/text_color_picker_label">

            <com.example.teleprompter.ColorPicker
                android:id="@+id/text_color_picker_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:show_text="false"
                tools:background="@color/colorWhite" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/background_color_picker_frame"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="@dimen/dimen_32dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/colorViewFrame"
            app:layout_constraintStart_toStartOf="@+id/colorViewFrame">

            <com.example.teleprompter.ColorPicker
                android:id="@+id/background_color_picker_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:elevation="6dp"
                app:show_text="false"
                tools:background="@color/colorWhite" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>